fixed most styling issues, picture not showing

--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -2,6 +2,7 @@
 .header-container {
     display: flex;
     border: 1px solid red;
+    height: 100%;
 }
 .header-content {
     display: flex;
